# GodotPython

./: GodotPython.gdextension  LICENSE.MD  README.MD  icon.svg.import  project.godot
godot_python/: Cargo.toml  web_publish.sh
godot_python/src/: conversion.rs  lib.rs  markdown_parser.rs  python_runner.rs  python_vm_common.rs  python_vm_godot.rs  python_vm_web.rs  stdout_override.py  stdout_override.rs
godot_python/src/python_vm_common/: python_converter.rs  rust_stdout.rs
godot_python/src/python_vm_godot/: godot_converter.rs
godot_python/src/python_vm_web/: wasm_converter.rs
godot_python_scripts/: godot_python_vm_wrapper.gd  godot_python_vm_wrapper.tscn  python_module_loader.gd  python_module_loader.tscn  python_vm.gd  python_vm.tscn
godot_python_test/: Circle.png.import  python_edit.gd  python_edit.tscn  test_scene.gd  test_scene.tscn
