[package]
name = "godot_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rustpython = "0.3.1"
rustpython-vm = "0.3.1"
rustpython-compiler = "0.3.1"
