[package]
name = "godot_python"
version = "0.7.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["freeze-stdlib"]
freeze-stdlib = ["rustpython-vm/freeze-stdlib", "rustpython-pylib/freeze-stdlib", "rustpython-stdlib"]

[dependencies]
indexmap = { version = "2.2.6", features = ["std"] }

rustpython-common = { version = "0.3.1" }
rustpython-pylib = { version = "0.3.1", optional = true }
rustpython-stdlib = { version = "0.3.1", default-features = false, optional = true }
rustpython-vm = { version = "0.3.1" }
rustpython-parser = { version = "0.3.1" }

cfg-if = "1.0"

serde = { version = "1.0.133", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-wasm", "lazy-function-tables"] }
rustpython = { version = "0.3.1", default-features = false, features = ["stdlib", "zlib", "importlib"]  }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rustpython = { version = "0.3.1", default-features = false, features = ["stdlib", "importlib"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "Response"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.dev]
opt-level = "s"